--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,12 +13,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App1"
+        android:theme="@style/Light.Theme.app1"
         tools:targetApi="31">
+
         <activity
             android:name=".Model"
             android:exported="false"
-            android:parentActivityName=".LoginPage"/>
+            android:parentActivityName=".LoginPage" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -37,11 +39,11 @@
             android:name=".maps"
             android:exported="false"
             android:label="@string/title_activity_maps"
-            android:parentActivityName=".LoginPage"/>
+            android:parentActivityName=".LoginPage" />
         <activity
             android:name=".LoginPage"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".RegistrationPage"
             android:exported="true" />
