--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Light.Theme.app1"
+        android:theme="@style/Base.Theme.App1"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.main.java"
+            android:exported="false" />
         <activity
             android:name=".Model"
             android:exported="false"
