--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:theme="@style/Base.Theme.App1"
         tools:targetApi="31">
         <activity
-            android:name=".ui.main.java"
+            android:name=".feedbackform"
+            android:exported="false" />
+        <activity
+            android:name=".ui.main.FeedbackForm"
             android:exported="false" />
         <activity
             android:name=".Model"
