--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,14 @@
         tools:targetApi="31">
         <activity
             android:name=".feedbackform"
-            android:exported="false" />
-        <activity
-            android:name=".ui.main.FeedbackForm"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".LoginPage"/>
+
         <activity
             android:name=".Model"
             android:exported="false"
-            android:parentActivityName=".LoginPage" />
+            android:parentActivityName=".LoginPage"
+            />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -51,7 +51,8 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".RegistrationPage"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
